mongodb, influxdb 내용 수정

--- a/_posts/2018-02-08-mongodb.md
+++ b/_posts/2018-02-08-mongodb.md
@@ -55,13 +55,128 @@ comments: true
     다만, 작업의 편의를 위해 호스트에도 mongodb를 설치는 해 두자. 서버는 docker container로 구동되지만, 호스트에서 접근이 가능하게 하려면..
 
 
-## 2. 파이썬-몽고DB 프로그래밍
+## 2. CLI 사용
+
+### 2.1 데이터베이스/테이블 생성
+
+
+### 2.2 데이터베이스 삭제
+
+    아래처럼 하자
+
+```
+> show dbs
+admin         0.000GB
+config        0.000GB
+local         0.000GB
+smartfarm_db  0.000GB
+terrydb       0.000GB
+> use terrydb
+switched to db terrydb
+> db.dropDatabase()
+{ "dropped" : "terrydb", "ok" : 1 }
+> show dbs
+admin         0.000GB
+config        0.000GB
+local         0.000GB
+smartfarm_db  0.000GB
+> 
+```
+
+### 2.x 특정 컬렉션(테이블)내 데이터 통째로 삭제
+
+```
+db.environment_tbl.remove({})
+```
+
+### 2.x 조회결과 카운트
+
+```
+db.environment_tbl.find().count()
+```
+
+
+### 2.x 중복데이터 지우기
+
+```javascript
+var duplicates = [];
+
+db.getCollection('environment_tbl').aggregate([  
+  { $match: { 
+      measDate: { $ne: ''},
+      facilityId: { $ne: ''},
+      fatrCode: { $ne: ''}
+  }},
+  { $group: { 
+      _id: { measDate: "$measDate", facilityId: "$facilityId", fatrCode: "$fatrCode"},
+      count: { $sum: 1},
+      dups: { $push: "$_id"}, 
+
+  }}, 
+  { $match: { 
+      count: { $gt: 1}
+  }}
+]).forEach(function(doc) {
+    doc.dups.shift();      
+    doc.dups.forEach( function(dupId){ 
+        duplicates.push(dupId);
+        }
+    )    
+})
+
+db.getCollection('environment_tbl').remove({_id:{$in:duplicates}})  
+
+```
+refer to [http://takuu.me/remove-duplicates-from-mongodb/](http://takuu.me/remove-duplicates-from-mongodb/)
+
+### 2.x SQL의 Group By 기능 (특정 값의 반복 횟수를 보여주는 방법)
+
+아래 예제는 주소(addressName)이 반복되는 횟수를 기준으로 group을 만듬.
+즉, _id, count 두 개로 이뤄진 가상의 테이블을 하나 만들고, count를 기준으로 내리막순 정렬을 시키는 것임.
+
+아래 예제는 farminfo_tbl에 기재된 주소(지역)를 기준으로 카운트
+```javascript
+db.farminfo_tbl.aggregate([
+    {"$group" : {_id:"$addressName", count:{$sum:1}}},
+    {"$sort":{"count":-1}}
+])
+```
+아래 예제는 수집된 environment 정보를 farm 기준으로 카운트한다. 이를 통해 수집현황을 볼 수 있다.
+```javascript
+db.environment_tbl.aggregate([
+    {"$group" : {_id:"$facilityId", count:{$sum:1}}},
+    {"$sort":{"count":-1}}
+])
+```
+
+### 2.x 테이블(콜렉션) 2개 조합해서 쿼리 하기
+
+```javascript
+db.environment_tbl.aggregate([   
+    {$group : {
+        _id:"$facilityId", 
+        count:{$sum:1}}},
+        {$lookup: {
+            from: "farminfo_tbl",
+            localField: "_id",
+            foreignField: "facilityId",
+            as: "wtf"
+        }}
+])
+```
+
+
+
+### 그 외 참고할 만한 좋은 사이트
+[MongoDB 명령어, 쿼리 사용법](http://jy86.tistory.com/entry/MongoDB-MongoDB-%EB%AA%85%EB%A0%B9%EC%96%B4-%EC%BF%BC%EB%A6%AC-%EC%82%AC%EC%9A%A9%EB%B2%95)
+
+## 3. 파이썬-몽고DB 프로그래밍
 
     먼저 pymongo를 설치한다.
 
 > pip3 install pymongo
 
-### 2.1 삽입
+### 3.1 삽입
 
     아래 코드를 실행해 본다.
 
@@ -114,30 +229,8 @@ comments: true
     잘 들어갔다.
     프로그램 실행시킬때 마다 같은 값이 들어간다. 단, _id값은 바뀐다. 근데 비슷하게 바뀐다. 무슨 상황인지 이해될꺼다.
     
-### 2.2 데이터베이스 삭제
+### 3.1 삽입
 
-    아래처럼 하자
-
-```
-> show dbs
-admin         0.000GB
-config        0.000GB
-local         0.000GB
-smartfarm_db  0.000GB
-terrydb       0.000GB
-> use terrydb
-switched to db terrydb
-> db.dropDatabase()
-{ "dropped" : "terrydb", "ok" : 1 }
-> show dbs
-admin         0.000GB
-config        0.000GB
-local         0.000GB
-smartfarm_db  0.000GB
-> 
-```
-
-### 2.3 ...
 
 
 
