--- a/_posts/2018-02-09-influxdb.md
+++ b/_posts/2018-02-09-influxdb.md
@@ -10,6 +10,9 @@ comments: true
 
 # InfluxDB와 Grafana 연동하여 시계열 데이터 시각화 하기
 
+InfluxDb나 Grafana는 시계열 데이터를 위해 특화되었기 때문에 time 정보가 있어야만 유용하게 사용할 수 있다.
+비 시계열성 데이터에 대한 chartting web app은 많이 있기는 한데, 라이센스가 유료일 공산이 크다.
+
 
 ## InfluxDB
 
@@ -18,7 +21,26 @@ comments: true
  - 현재 시각 이후의 미래 데이터는 저장이 안됨(?)
  - 시계열 데이터는 UTC 시간 기준
     - 즉, datetime.now()가 아닌 datetime.utcnow()를 써야 함.
+ - 같은 시간으로 여러 데이터를 넣으면 덮어 씌워진다.
+    - 이를 해결하려면, 특정 데이터는 'tag'로 저장하면 된다. 아래 예제 참고
 
+    ```json
+    {
+            "measurement": table_name,
+            "tags": {
+                "fatrCode": None
+            },
+            "fields": {
+                "facilityId": None,
+                "fatrCode": None,
+                "fldCode": None,
+                "itemCode" : None,
+                "sectCode" : None,
+                "senVal" : 0
+            },
+            "time": None,
+        }
+    ```
 
 ### InfluxDB 설치
 
@@ -78,6 +100,19 @@ _internal
 
 ```
 TBD
+```
+
+시간정보가 가독성 떨어지면,
+
+```
+> precision rfc3339
+```
+
+
+measurement(table)을 없애려면,
+
+```
+drop measurement environment_tbl
 ```
 
 
