--- a/_posts/2018-12-19-awk.md
+++ b/_posts/2018-12-19-awk.md
@@ -1,14 +1,25 @@
 ---
 layout: post
-title: "AWK 사용법"
+title: "AWK, Xargs 등 bash script"
 author: "Wook Hyun"
 categories: resources
 tags: [blog]
-image: city-1.jpg
+image: nature-1.jpg
 comments: true
 ---
 
 
-# AWK 사용법
+# AWK, Xargs 등 사용예제
 
+특정 사이트의 html 내용 분석해서 mp4 파일만 다운로드하는 shell script
+
+awk, xargs 등의 사용예제를 확인가능함.
+
+```bash
+rm article/*
+rm pages/*
+python3 app.py
+grep wr_id pages/board.php\?bo_table\=korea\&page\=*|grep Hot|awk -F 'a href=\"' '{ print $2 }'|awk -F '&amp;page' '{print $1}' | sed 's/\&amp;/\&/' | xargs wget -P article
+grep mp4 article/* | awk -F '=http://a.b.c/' '{print "http://a.b.c/" $2}'| awk -F '&amp' '{print $1}'| xargs wget -x
+```
 
