several posts has been posted

--- a/_posts/2018-12-19-awk.md
+++ b/_posts/2018-12-19-awk.md
@@ -2,7 +2,7 @@
 layout: post
 title: "AWK, Xargs 등 bash script"
 author: "Wook Hyun"
-categories: resources
+categories: tips
 tags: [blog]
 image: nature-1.jpg
 comments: true
