--- a/_posts/2018-12-19-awk.md
+++ b/_posts/2018-12-19-awk.md
@@ -4,7 +4,7 @@ title: "AWK, Xargs 등 bash script"
 author: "Wook Hyun"
 categories: tips
 tags: [blog]
-image: nature-1.jpg
+image: bash.jpg
 comments: true
 ---
 
