--- a/_posts/2018-12-19-jekyll.md
+++ b/_posts/2018-12-19-jekyll.md
@@ -4,7 +4,7 @@ title: "Jekyll 사용팁"
 author: "Wook Hyun"
 categories: tips
 tags: [blog]
-image: nature-1.jpg
+image: jekyll_github.png
 comments: true
 ---
 
