--- a/_posts/2020-02-22-new-rise.md
+++ b/_posts/2020-02-22-new-rise.md
@@ -1,6 +1,27 @@
 ---
 layout: page
-title: new beginning
+title: Jekyll + Github.io + New Theme + Tips
 ---
 
-![a](/assets/images/2020-02-24-00-41-22.png)
+구글 블로그를 이용하다가 구글놈들이 계정을 막아버리면서 모든 내 데이터를 날려버렸다.
+몇년동안 쓰던 기술블로그 내용을 모두 복구하지 못한 상태로 계정 데이터가 모두 삭제된 관계로 예전에 쓰던 Github.io 에서 다시 시작한다.
+
+예전에 만들었던 Jekyll Theme를 다른 것으로 바꾸고 jekyll 4로 업그레이드 하였다.
+내부적인 변화는 많았던 것 같으나 기본적인 사용법은 [예전](https://superwhyun.github.io/documentation/2018/02/02/github-blog/)에 비해 크게 달라지지 않은것 같다.
+
+
+- Jekyll 4 설치 
+  ```
+  brew install gem
+  gem install jekyll
+  ```
+- 로컬에서 실행시킬 때 아래와 같이 한다.
+  ``` 
+  bundle exec jekyll serve
+  ```
+- 너무나 내 취향에 딱 맞는 [테마](https://github.com/simpleyyt/jekyll-theme-next)를 발견해서 적용함
+  - _config.yml 파일에 몇가지 손을 대 줘야 하는데 설치환경에 따라 다른 상황인지라 자세한 내용은 생략한다.
+- Visual Studio Code에서 작업하기 위해 플러그인으로 "paste image"를 설치함. 
+  - 이 확장 플러그인을 사용하면, 이미지 복사를 하면 자동으로 적당한 위치에 복사를 해주고 링크 텍스트도 같이 넣어준다.
+  - "command + ," 키를 누르면 Setting화면이 나오는데, 여기에서 'paste image'에 해당되는 설정을 찾아 적당히 수정해 주면 된다. 좀더 상세한 내용을 보고 싶으면 [여기](https://teamsmiley.github.io/2019/02/14/vscode-paste-image/)를 참고하자.
+
