--- a/_posts/2018-02-08-mongodb.md
+++ b/_posts/2018-02-08-mongodb.md
@@ -3,7 +3,7 @@ layout: post
 title: "MongoDB 사용하기"
 author: "Wook Hyun"
 categories: upcoming
-tags: [blog]
+tags: [mongodb, docker]
 image: arctic-2.jpg
 comments: true
 ---
