--- a/_posts/2018-02-09-influxdb.md
+++ b/_posts/2018-02-09-influxdb.md
@@ -3,7 +3,7 @@ layout: post
 title: "InfuxDB + Grafana 사용하기"
 author: "Wook Hyun"
 categories: upcoming
-tags: [blog]
+tags: [influxdb, grafana]
 image: arctic-1.jpg
 comments: true
 ---
