--- a/_posts/2018-02-14-learning.md
+++ b/_posts/2018-02-14-learning.md
@@ -3,7 +3,7 @@ layout: post
 title: "유용한 학습 사이트"
 author: "Wook Hyun"
 categories: resources
-tags: [blog]
+tags: [coding, learning]
 image: city-1.jpg
 comments: true
 ---
