--- a/_posts/2018-12-19-jekyll.md
+++ b/_posts/2018-12-19-jekyll.md
@@ -3,7 +3,7 @@ layout: post
 title: "Jekyll 사용팁"
 author: "Wook Hyun"
 categories: tips
-tags: [blog]
+tags: [jekyll, google docs, damnit google]
 image: jekyll_github.png
 comments: true
 ---
