--- a/_posts/2018-12-21-ffmpeg.md
+++ b/_posts/2018-12-21-ffmpeg.md
@@ -3,7 +3,7 @@ layout: post
 title: "FFMPEG 사용하기"
 author: "Wook Hyun"
 categories: tips
-tags: [blog]
+tags: [ffmpeg, usage]
 image: ffmpeg.jpg
 comments: true
 ---
