--- a/_posts/2018-12-25-MUD.md
+++ b/_posts/2018-12-25-MUD.md
@@ -3,7 +3,7 @@ layout: post
 title: "MUD의 역사/계보, 근황, 그리고 한글화"
 author: "Wook Hyun"
 categories: documentation
-tags: [blog]
+tags: [mud, history, source]
 image: mud.png
 comments: true
 ---
