--- a/_posts/2018-12-26-unity-vr.md
+++ b/_posts/2018-12-26-unity-vr.md
@@ -3,7 +3,7 @@ layout: post
 title: "Unity3D로 AR/VR 앱 만들기"
 author: "Wook Hyun"
 categories: upcoming
-tags: [blog]
+tags: [Unity, VR, draft]
 image: unity/unity.jpg
 comments: true
 ---
