--- a/_posts/2020-03-09-game-ck2.md
+++ b/_posts/2020-03-09-game-ck2.md
@@ -2,7 +2,7 @@
 layout: post
 categories: game
 tags: [crusader kings 2, mac, screen, half, problem, solve]
-title: Crusader Kings 2를 맥에서 플레이할 떄 화면이 반토막 나는 문제 해결
+title: Crusader Kings 2를 맥에서 플레이 할 때 화면이 반토막 나는 문제 해결
 ---
 
 스팀에서 무료로 뿌리는 크루세이터 킹즈 2를 맥에서 설치하고 플레하면 화면이 반쯤 아래로 내려간다.
