--- a/_posts/2022-07-08-season3.md
+++ b/_posts/2022-07-08-season3.md
@@ -1,15 +1,15 @@
 ---
 layout: post
 categories: draft
-tags: [linux, ubuntu, actiona, auto, script]
-title: actiona 사용법
+tags: [season3, jekyll, github.io]
+title: 글쓰기 다시 시작
 ---
 
-기억이란...
+다양한 다른 blogging 공간을 돌아 다니다 다시 정착하려 함.
+어딜가도 딱 마음에 드는 것들은 없다. 하나가 마음에 들면 둘이 마음에 안들고..
 
-참으로 무상한것...
+다시 github.io로 돌아 왔지만...
+한 2년 쉬는 사이에 버전도 많이 바뀌었고 뭔가 다시 단도리를 해야할 것 같다.
 
-오랜만에 들여다 봤더니 아무것도 기억이 남지 않아...
 
-이전의 기억이 훑고 지나간 흔적만으로 다시 되짚어 간다.
 
