2022-07-17-맥북에서-화면과-소리-녹화하기 is uploaded

--- a/_posts/2022-07-17-맥북에서-화면과-소리-녹화하기.md
+++ b/_posts/2022-07-17-맥북에서-화면과-소리-녹화하기.md
@@ -1,11 +1,16 @@
 ---
 title: 맥북에서 화면과 소리 녹화하기
 
-categories: information
+categories: 
 tags: []
+Created: 2022년 5월 18일 오후 11:32
+Last Edited Time: 2022년 7월 17일 오전 3:58
+---
+Status: 완료
+요약: 맥북에서 재생되는 영상을 소리와 함께 녹화하는 다양한 방법이 있겠지만, BlackHole이라는 녀석을 이용한 방법을 설명함
+
 맥OS에서 기본적으로 지원하는 방법으로 
 
----
 - command + shift + 5  를 누르면 화면을 녹화할 수 있음.
     - command + shift + 4 는 화면 캡처만 됨.
 - quickTime Player를 이용해 녹화할 수도 있으나, 대동소이하다.
