2022-07-17-맥북에서-화면과-소리-녹화하기 is uploaded

--- a/_posts/2022-07-17-맥북에서-화면과-소리-녹화하기.md
+++ b/_posts/2022-07-17-맥북에서-화면과-소리-녹화하기.md
@@ -1,7 +1,7 @@
 ---
 title: 맥북에서 화면과 소리 녹화하기
 
-categories: 
+categories: information
 tags: []
 Created: 2022년 5월 18일 오후 11:32
 Last Edited Time: 2022년 7월 17일 오전 3:58
