2022-07-23-스위스-제네바-프랑스-페르니-볼테르의-7월 is uploaded

--- a/_posts/2022-07-23-스위스-제네바-프랑스-페르니-볼테르의-7월.md
+++ b/_posts/2022-07-23-스위스-제네바-프랑스-페르니-볼테르의-7월.md
@@ -2,7 +2,7 @@
 title: 스위스 제네바, 프랑스 페르니 볼테르의 7월
 
 categories: blog
-tags: [제네바, 페르니, 볼테르, 풍경, 출장]
+tags: []
 2022년 7월.. 출장… 간만에 간 출장이라 그런지 그동안의 노하우 다 까먹.. 
 
 ---
